feat(product): auto-apply Vault on JAN load (pre-render) to reduce empty state
feat(product): add 'Vault補完適用' badge (#vaultBadge); track state.vaultApplied in render()

feat(product/settings): add toggles 'Vault補完を使用' (#vaultEnableToggle) and 'Vaultを優先' (#vaultPreferToggle); persist via SETTINGS_KEY; reload on change

feat(product): add sources.vault flag in mergeProducts(); mark true on Vault overlay

chore(product): gate Vault overlay by settings; switchable prefer/merge behavior

--- a/memo.html
+++ b/memo.html
@@ -89,6 +89,7 @@
       <a class="tab" href="./help.html">説明</a>
       <a class="tab active" href="./memo.html">メモ</a>
       <a class="tab" href="./camera.html">カメラ</a>
+      <a class="tab" href="./product.html">製品</a>
       <a class="tab" href="./timer.html">タイマー</a>
       <a class="tab" href="./convert.html">換算</a>
       <a class="tab" href="./password.html">PW</a>
